k8s/prod/uda-app.yml
apiVersion: v1
kind: Service
metadata:
  name: uda-app-service
spec:
  type: NodePort
  selector:
    pod: uda-app
  ports:
    - name: uda-app-port
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uda-capstone
  labels:
    component: uda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: uda-app
  template:
    metadata:
      labels:
        pod: uda-app
    spec:
      containers:
        - name: uda-app
          image: phucla132/fe-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
